# NUCLEO-F302R8

./: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSIPConfig.h  README.md  build.ps1  dump.txt  stm32f3.ld  test.ps1  toolchain-STM32F302R8.cmake  toolchain-x86.cmake
lib/FreeRTOS-Plus-TCP/: CMakeLists.txt  FreeRTOS_IP_Utils.c  FreeRTOS_Routing.c
lib/FreeRTOS-Plus-TCP/portable/: CMakeLists.txt
lib/FreeRTOS-Plus-TCP/portable/NetworkInterface/esp32_wifi_via_uart/: NetworkInterface.c
src/: main.c  startup.s
src/Driver/: CMakeLists.txt
src/Driver/Clock/: Clock.c  Clock.h
src/Driver/Port/: Port.c  Port.h
src/Driver/adc/: adc.c  adc.h
src/Driver/exit/: exit.c  exit.h
src/Driver/exti/: exti.c  exti.h
src/Driver/nvic/: nvic.c  nvic.h
src/Driver/syscfg/: syscfg.c  syscfg.h
src/Driver/timer/: timer.c  timer.h
src/Driver/uart/: uart.c  uart.h  usart_df.h
src/app/: CMakeLists.txt  app.c  app_tasks.h
src/include/: Platform_Types.h
test/: CMakeLists.txt  test.cc  test_main.c  test_main.h
